状态机翻译

--- a/状态机译文.md
+++ b/状态机译文.md
@@ -25,12 +25,12 @@
 ## 目录
 
 - [ transitions](#-transitions)
-  - [Installation](#installation)
-  - [Table of Contents](#table-of-contents)
-  - [Quickstart](#quickstart)
-  - [The non-quickstart](#the-non-quickstart)
-    - [Basic initialization](#basic-initialization)
-    - [States](#states)
+  - [安装](#安装)
+  - [目录](#目录)
+  - [快速上手](#快速上手)
+  - [不那么快速的上手](#不那么快速的上手)
+    - [基础初始化](#基础初始化)
+    - [状态](#状态)
       - [Callbacks](#callbacks)
       - [Checking state](#checking-state)
       - [Enumerations](#enumerations)
@@ -90,7 +90,7 @@ class NarcolepticSuperhero(object):
         # 添加一些转换。我们也可以用一个静态的包含字典的列表，就像之前定义状态那样，
         # 然后使用关键字参数 transitions= argument 把列表传给 Machine 的初始化器。
 
-        # 每个超级英雄都有自己的闪光时刻。
+        # 每个超级英雄都有属于自己的时刻。
         self.machine.add_transition(trigger='wake_up', source='asleep', dest='hanging out')
 
         # 超级英雄要时刻保持身材。
@@ -109,28 +109,28 @@ class NarcolepticSuperhero(object):
         self.machine.add_transition('complete_mission', 'saving the world', 'sweaty',
                          after='update_journal')
 
-        # Sweat is a disorder that can be remedied with water.
-        # Unless you've had a particularly long day, in which case... bed time!
+        # 你可以洗去身上的汗渍。
+        # 除非你真的有很多事，不然，该睡觉了。
         self.machine.add_transition('clean_up', 'sweaty', 'asleep', conditions=['is_exhausted'])
         self.machine.add_transition('clean_up', 'sweaty', 'hanging out')
 
-        # Our NarcolepticSuperhero can fall asleep at pretty much any time.
+        # 我们的嗜睡症英雄可以在任何情况下睡去。
         self.machine.add_transition('nap', '*', 'asleep')
 
     def update_journal(self):
-        """ Dear Diary, today I saved Mr. Whiskers. Again. """
+        """亲爱的日记，今天我又一次拯救了Mr. Whiskers。"""
         self.kittens_rescued += 1
 
     @property
     def is_exhausted(self):
-        """ Basically a coin toss. """
+        """五五开的概率"""
         return random.random() < 0.5
 
     def change_into_super_secret_costume(self):
         print("Beauty, eh?")
 ```
 
-There, now you've baked a state machine into `NarcolepticSuperhero`. Let's take him/her/it out for a spin...
+现在你已经制作了一个 `NarcolepticSuperhero`（嗜睡症英雄）状态机。让我们带他出来溜两圈。
 
 ```python
 >>> batman = NarcolepticSuperhero("Batman")
@@ -153,41 +153,41 @@ MachineError: "Can't trigger event clean_up from state asleep!"
 >>> batman.state
 'hungry'
 
-# Batman still hasn't done anything useful...
+#蝙蝠侠现在什么都还没做...
 >>> batman.kittens_rescued
 0
 
-# We now take you live to the scene of a horrific kitten entreement...
+# 现在我们该去现场拯救小猫了。
 >>> batman.distress_call()
 'Beauty, eh?'
 >>> batman.state
 'saving the world'
 
-# Back to the crib.
+# 回到公寓。
 >>> batman.complete_mission()
 >>> batman.state
 'sweaty'
 
 >>> batman.clean_up()
 >>> batman.state
-'asleep'   # Too tired to shower!
+'asleep'   # 太困了！来不及洗澡！
 
-# Another productive day, Alfred.
+# 又是新的一天...阿尔弗雷德。
 >>> batman.kittens_rescued
 1
 ```
 
-While we cannot read the mind of the actual batman, we surely can visualize the current state of our `NarcolepticSuperhero`.
+我们虽然不能读到蝙蝠侠的想法，但我们可以将`NarcolepticSuperhero`的状态可视化。
 
 ![batman diagram](https://user-images.githubusercontent.com/205986/104932302-c2f24580-59a7-11eb-8963-5dce738b9305.png)
 
-Have a look at the [Diagrams](#diagrams) extensions if you want to know how.
+具体方法可以查看[Diagrams](#diagrams)扩展。
 
-## The non-quickstart
+## 不那么快速的上手
 
-### Basic initialization
+### 基础初始化
 
-Getting a state machine up and running is pretty simple. Let's say you have the object `lump` (an instance of class `Matter`), and you want to manage its states:
+想要一个状态机跑起来是十分简单的。假设我们有一个`lump`物体 ( `Matter`类的一个实例)，你想要管理他的状态。
 
 ```python
 class Matter(object):
@@ -196,27 +196,25 @@ class Matter(object):
 lump = Matter()
 ```
 
-You can initialize a (_minimal_) working state machine bound to `lump` like this:
+你可以用这种方式将一个状态机(_最基础版本_)绑定到`lump`上:
 
 ```python
 from transitions import Machine
 machine = Machine(model=lump, states=['solid', 'liquid', 'gas', 'plasma'], initial='solid')
 
-# Lump now has state!
+# Lump已经有状态了。
 lump.state
 >>> 'solid'
 ```
 
-I say "minimal", because while this state machine is technically operational, it doesn't actually _do_ anything. It starts in the `'solid'` state, but won't ever move into another state, because no transitions are defined... yet!
-
-Let's try again.
-
+"最基础版本"是指这个状态机仅处于一个可使用状态，它没有任何功能。它以`'solid'`状态开始，但永远不会进入下一个状态，因为还没有定义任何过渡。
+让我们再试一次！
 ```python
-# The states
+# 状态
 states=['solid', 'liquid', 'gas', 'plasma']
 
-# And some transitions between states. We're lazy, so we'll leave out
-# the inverse phase transitions (freezing, condensation, etc.).
+# 然后给状态添加一些过渡。为了减轻我们的压力，一些反向的过渡就先省略。（比如freezing、condensation等）
+
 transitions = [
     { 'trigger': 'melt', 'source': 'solid', 'dest': 'liquid' },
     { 'trigger': 'evaporate', 'source': 'liquid', 'dest': 'gas' },
@@ -224,14 +222,14 @@ transitions = [
     { 'trigger': 'ionize', 'source': 'gas', 'dest': 'plasma' }
 ]
 
-# Initialize
+# 初始化
 machine = Machine(lump, states=states, transitions=transitions, initial='liquid')
 
-# Now lump maintains state...
+# 现在lump不仅有状态
 lump.state
 >>> 'liquid'
 
-# And that state can change...
+# 而且状态可以转换
 lump.evaporate()
 lump.state
 >>> 'gas'
@@ -240,13 +238,13 @@ lump.state
 >>> 'plasma'
 ```
 
-Notice the shiny new methods attached to the `Matter` instance (`evaporate()`, `ionize()`, etc.). Each method triggers the corresponding transition. You don't have to explicitly define these methods anywhere; the name of each transition is bound to the model passed to the `Machine` initializer (in this case, `lump`).
-To be more precise, your model **should not** already contain methods with the same name as event triggers since `transitions` will only attach convenience methods to your model if the spot is not already taken.
-If you want to modify that behaviour, have a look at the [FAQ](examples/Frequently%20asked%20questions.ipynb).
-Furthermore, there is a method called `trigger` now attached to your model (if it hasn't been there before).
-This method lets you execute transitions by name in case dynamic triggering is required.
+注意这下`Matter`实例下的全新方法(`evaporate()`, `ionize()`, etc.)。每一个方法都能触发对应的过渡。你不需要在任何地方定义这些方法；这些过渡的名字在绑定到模型时传递到了`Machine`初始化器里 （在这个例子里，就是 `lump`实例）.
+更准确的说，你的模型**不应该**包含相同名字的过渡。 `transitions`只会在名字不被使用的情况下才会将这些方便的方法加到模型里面。
+如果你想要定义这些行为，请移步[FAQ](examples/Frequently%20asked%20questions.ipynb).
+更进一步，一个叫`trigger`的方法会添加到你的模型里面（如果模型原来没有这个方法的话）。
+当你需要动态触发的时候，这些方法能让你用名字去触发过渡。
 
-### <a name="states"></a>States
+### <a name="states"></a>状态
 
 The soul of any good state machine (and of many bad ones, no doubt) is a set of states. Above, we defined the valid model states by passing a list of strings to the `Machine` initializer. But internally, states are actually represented as `State` objects.
 
