状态机翻译

--- a/状态机译文.md
+++ b/状态机译文.md
@@ -246,9 +246,9 @@ lump.state
 
 ### <a name="states"></a>状态
 
-The soul of any good state machine (and of many bad ones, no doubt) is a set of states. Above, we defined the valid model states by passing a list of strings to the `Machine` initializer. But internally, states are actually represented as `State` objects.
+一个好状态机的灵魂就是一系列的状态（不好的状态机的灵魂也是）。我们通过将一个字符串的列表传入`Machine`的初始化方法来定义状态。但是在内部，状态其实是一个`State`元素。
 
-You can initialize and modify States in a number of ways. Specifically, you can:
+你可以用许多方法去初始化或更改一个状态。比如：
 
 - pass a string to the `Machine` initializer giving the name(s) of the state(s), or
 - directly initialize each new `State` object, or
