卡牌状态机更新

--- a/状态机译文.md
+++ b/状态机译文.md
@@ -209,6 +209,7 @@ lump.state
 
 "最基础版本"是指这个状态机仅处于一个可使用状态，它没有任何功能。它以`'solid'`状态开始，但永远不会进入下一个状态，因为还没有定义任何过渡。
 让我们再试一次！
+
 ```python
 # 状态
 states=['solid', 'liquid', 'gas', 'plasma']
@@ -250,9 +251,9 @@ lump.state
 
 你可以用许多方法去初始化或更改一个状态。比如：
 
-- pass a string to the `Machine` initializer giving the name(s) of the state(s), or
-- directly initialize each new `State` object, or
-- pass a dictionary with initialization arguments
+- 将一个字符串传入`Machine`初始化阶段来进行命名，或者
+- 直接初始化每一个`State`物体，或者
+- 传入一个带有初始化参数的字典
 
 The following snippets illustrate several ways to achieve the same goal:
 
